--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rx-nostr-practice",
+  "name": "chiihou",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -14,7 +14,7 @@
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.2.4",
     "@sveltejs/adapter-static": "^3.0.4",
-    "@sveltejs/kit": "^2.5.22",
+    "@sveltejs/kit": "^2.5.24",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "prettier": "^3.3.3",
     "prettier-plugin-svelte": "^3.2.6",
@@ -22,7 +22,7 @@
     "svelte-check": "^3.8.5",
     "tslib": "^2.4.1",
     "typescript": "^5.5.4",
-    "vite": "^5.4.0"
+    "vite": "^5.4.2"
   },
   "dependencies": {
     "nostr-tools": "^2.7.2",
