--- a/package.json
+++ b/package.json
@@ -20,20 +20,21 @@
 		"rx-nostr-crypto": "^3.1.3"
 	},
 	"devDependencies": {
+		"@eslint/compat": "^1.2.7",
 		"@sveltejs/adapter-static": "^3.0.8",
-		"@sveltejs/kit": "^2.17.1",
+		"@sveltejs/kit": "^2.17.3",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"eslint": "^9.20.0",
-		"eslint-config-prettier": "^10.0.1",
-		"eslint-plugin-svelte": "^2.36.0",
-		"globals": "^15.14.0",
-		"prettier": "^3.4.2",
+		"eslint": "^9.21.0",
+		"eslint-config-prettier": "^10.0.2",
+		"eslint-plugin-svelte": "^3.0.2",
+		"globals": "^16.0.0",
+		"prettier": "^3.5.2",
 		"prettier-plugin-svelte": "^3.3.3",
-		"svelte": "^5.19.9",
+		"svelte": "^5.20.5",
 		"svelte-check": "^4.1.4",
 		"typescript": "^5.7.3",
-		"typescript-eslint": "^8.23.0",
-		"vite": "^6.1.0",
-		"vitest": "^3.0.5"
+		"typescript-eslint": "^8.25.0",
+		"vite": "^6.2.0",
+		"vitest": "^3.0.7"
 	}
 }
