--- a/package.json
+++ b/package.json
@@ -15,26 +15,26 @@
 		"test": "npm run test:unit -- --run"
 	},
 	"dependencies": {
-		"nostr-tools": "^2.11.0",
-		"rx-nostr": "^3.5.0",
-		"rx-nostr-crypto": "^3.1.3"
+		"@rx-nostr/crypto": "^0.0.0",
+		"nostr-tools": "^2.15.2",
+		"rx-nostr": "^3.6.1"
 	},
 	"devDependencies": {
-		"@eslint/compat": "^1.2.7",
+		"@eslint/compat": "^1.3.1",
 		"@sveltejs/adapter-static": "^3.0.8",
-		"@sveltejs/kit": "^2.20.2",
-		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"eslint": "^9.23.0",
-		"eslint-config-prettier": "^10.1.1",
-		"eslint-plugin-svelte": "^3.3.3",
-		"globals": "^16.0.0",
-		"prettier": "^3.5.3",
-		"prettier-plugin-svelte": "^3.3.3",
-		"svelte": "^5.25.3",
-		"svelte-check": "^4.1.5",
-		"typescript": "^5.8.2",
-		"typescript-eslint": "^8.28.0",
-		"vite": "^6.2.3",
-		"vitest": "^3.0.9"
+		"@sveltejs/kit": "^2.26.1",
+		"@sveltejs/vite-plugin-svelte": "^6.1.0",
+		"eslint": "^9.32.0",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-plugin-svelte": "^3.11.0",
+		"globals": "^16.3.0",
+		"prettier": "^3.6.2",
+		"prettier-plugin-svelte": "^3.4.0",
+		"svelte": "^5.37.0",
+		"svelte-check": "^4.3.0",
+		"typescript": "^5.8.3",
+		"typescript-eslint": "^8.38.0",
+		"vite": "^7.0.6",
+		"vitest": "^3.2.4"
 	}
 }
